--- a/login.css
+++ b/login.css
@@ -44,7 +44,7 @@ legend img{
 	width:300px;
 	max-width:650px;
 	height:300px;	
-	background-color:rgba(255,255,255,1);
+	background-color:rgb(255, 255, 255);
 	border-radius:0px;
 	padding:0 0 0 0;
 	margin:0px auto;
@@ -55,7 +55,7 @@ legend img{
 }
 #topbox
 {
-    background: #484f56;
+    background: #ffe601f3;
     width: 100%;
     height: 70px;
     
@@ -115,7 +115,7 @@ color:#ccc;}
             height: 300px;
             width:300px;
             position: absolute;
-            background: url(gimman.png) center no-repeat, #484f56;
+            /* background: url(gimman.png) center no-repeat, #484f56; */
         }
         #user,#pass,#boton,#error{
             position: relative;
@@ -124,9 +124,9 @@ color:#ccc;}
         }
         legend{
             position: relative;
-            top:100px;
+            top: 80px;
         }
         legend img{
-    width:80px;
-}
+    width: 200px;
        }
+    }
